@@ -148,6 +148,9 @@ private:
     // returns index of item that contains given HTML cell
     size_t GetItemForCell(const wxHtmlCell *cell) const;
 
+    // Create the cell for the given item, caller is responsible for freeing it.
+    wxHtmlCell* CreateCellForItem(size_t n) const;
+
     // return physical coordinates of root wxHtmlCell of n-th item
     wxPoint GetRootCellCoords(size_t n) const;
 
